# mcp-rag-server

./: .env.example  .gitignore  Dockerfile  README.md  README_en.md  README_es.md  docker-compose.yml  pyproject.toml
assets/: preguntas.txt
data_procesor/: semantic_chunks.json  structured_sections.json
services/mcp_server/: MCP_server_readme_EN.md  MCP_server_readme_ES.md  server.py
services/mcp_server/tools/: csirt.py  incident.py  models.py  notification.py
src/retrieval_graph/: __init__.py  configuration.py  graph.py  index_graph.py  ingest_elastic.py  models.py  nodes.py  prompts.py  retrieval.py  state.py  utils.py
src/retrieval_graph/mcp/: client.py
src/retrieval_graph/notebooks/: chunking_semantico.ipynb  ingest_elastic.ipynb  parsing_pdf.ipynb  test_elastic.ipynb
ui/: Dockerfile  streamlit_app.py  utils.py
