[project]
name = "retrieval-graph"
version = "0.0.1"
description = "Cyber incident agent"
authors = [
    {name = "Pablo",email = "pablodeharo872@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastmcp (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
